2011-08-24  Moritz Bunkus  <moritz@bunkus.org>

	* all: Added an Lithuanian translation by Mindaugas Baranauskas
	(see AUTHORS).

2011-08-02  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: When looking for MPEG files with the same
	base name as a source file mkvmerge will be stricter what it
	accepts. The file name must consist of at least one char followed
	by "-" or "_" followed by a number. That will match VTS_01_1.VOB
	but not e.g. "some_series_s03e10.mpg".

2011-07-31  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Opening MPEG files with numbers in their name
	from folders with e.g. Cyrillic names failed on Windows.

	* mkvmerge: bug fix: Several elements are not written when
	creating WebM compliant files. In the segment headers: SegmentUID,
	SegmentFamily, ChapterTranslate, PreviousSegmentUID,
	NextSegmentUID. In the track headers: MinCache, MaxCache and
	MaxBlockAdditionID.

2011-07-19  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Sped up file identification by caching
	read operations.

	* mkvmerge: bug fix: Fixed identifying QuickTime/MP4 files that
	start with a 'skip' atom.

2011-07-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed a crash when reading AVI files with DTS
	audio tracks that do not contain valid headers in the first couple
	of packets. Fix for bug 646.

2011-07-11  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.9.1.

	* mkvmerge: bug fix: Fixed endless loop when reading AVI files on
	Windows if MKVToolNix was compiled with a gcc mingw cross compiler
	v4.4.x. Fix for bug 642.

	* mkvmerge: bug fix: Fixed long file identification time caused by
	DV detection. Fix for bug 641.

2011-07-10  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.9.0.

2011-07-09  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: DV files are recognized as an unsupported
	container type. Fix for bug 630.

	* mkvmerge: bug fix: Fixed handling block groups in Matroska