@@ -28,6 +28,10 @@ Chen, Mike <mike.chen82@googlemail.com>
 Coalson, Josh <j_coalson@yahoo.com>
     * support for libFLAC 1.1.3
 
+Domínguez, Cosme <cosme.ddiaz@gmail.com>
+    * Fixed mmg's configuration location to conform to the XDG Base
+      Directory Specification
+
 Duret, Xavier <xaviour.maillists@gmail.com>
     * Bugfix for timecode and default duration calculation for MPEG-1/2 tracks
     * 'Interlaced' header flag for interlaced MPEG-1/2 tracks
